--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   
 </head>
 <body>
@@ -21,7 +21,7 @@
         <li class="name"><span class="icon">C</span>oolkidz</li>
         <li><a href="#works">Works</a></li>
         <li class="drop"><a href="#">Blogs</a><div class="dropdown-content">
-          <a href="#">1</a>
+          <a href="#">1 will be updated.. same for others</a>
           <a href="#">2 </a>
           <a href="#"> 3</a>
           </div></li>
@@ -52,11 +52,11 @@
           <ul>
             <li class="joshua" onclick='skill()'>Skills</li>
             <li class="joshua" onclick="education()">Education</li>
-            <li class="joshua"><a href="#" class="joshua"> Resume</a></li>
+            <a href="resume.html" class="joshua"><li class="joshua"> Resume</a></li>
           </ul>
           <p class="joshua" id="skills">
             <span class="joshua">Web Development</span><br>
-            web app development using Flask<br><br>
+            Web app development using Flask<br><br>
             <span class="joshua">Data science</span><br>
             Python , Numoy, Pandas & Open CV<br><br>
             <span class="joshua">DSA</span><br>
@@ -67,9 +67,9 @@
           </p>
           <p class="joshua1" id="educations">
             <span class="joshua">10TH Standard</span><br>
-            completed from Army Public School , Shankar vihar Delhi<br><br>
+            Completed from Army Public School , Shankar vihar Delhi<br><br>
             <span class="joshua">12TH , Higher Secondary</span><br>
-            completed from Army Public School , Udhampur J&K<br><br>
+            Completed from Army Public School , Udhampur J&K<br><br>
             <span class="joshua">Graduation</span><br>
             Currently pursueing BCA from Maharaja Surajmal Institute , Janakpuri Delhi<br><br>
 
@@ -88,15 +88,47 @@
     </div> 
     <div class="works"><a name="works"></a>
         <span class="works"><h1 class="works">MY WORKS</h1></span><br>
+
+        <!--DATA SCIENCE CARD-->
         <div class="card">
-          <div class="a">Hospital Management</div>
+          <div class="a"><center>DATA SCIENCE</center></div>
 
           <div class="b">
-            <h4>Hospital Management</h4>
-            <center><a href="#"><span class="card glyphicon glyphicon-new-window"></span></a></center>
-            <p class="card">This web appliction allows to manage the hospital appointments and records
-              its gives access to user , admin and doctor each with their own feature
-            </p>
+            <h4>DATASCIENCE PROJECT</h4>
+            <div class="inner"><center>Titanic Survival<br>
+              <a href="https://github.com/JOSHUA-MUANLAL/titanic-py.git"><span class="card glyphicon glyphicon-new-window"></span></a>&nbsp;&nbsp;
+                <a href='https://github.com/JOSHUA-MUANLAL/titanic_survival_prediction.git'><i class="fab fa-github"></i></a></center>
+                
+            </div>
+            
+            <div class="inner"><center>Car Price Prediction<br>
+              <a href="#"><span class="card glyphicon glyphicon-new-window"></span></a>&nbsp;&nbsp;
+                <a href='#'><i class="fab fa-github"></i></a></center>
+              </div>
+              <div class="inner"><center>Sales Prediction<br>
+                <a href="https://github.com/JOSHUA-MUANLAL/sales_prediction.git"><span class="card glyphicon glyphicon-new-window"></span></a>&nbsp;&nbsp;
+                  <a href='https://github.com/JOSHUA-MUANLAL/sales_prediction.git'><i class="fab fa-github"></i></a></center>
+              </div>    
+
+
+          </div>
+
+        </div>
+
+        <!--PROGRAMMING CARD-->
+
+
+        <div class="card">
+          <div class="a1"><center>PROGRAMMING</center> </div>
+
+          <div class="b">
+            <h4>PYTHON PROGRAMMING</h4>
+            <div class="inner"><center>Roc-Paper-Scissor<br>
+                <a href='https://github.com/JOSHUA-MUANLAL/rock-paper-scissor.git'><i class="fab fa-github"></i></a></center>
+            </div>
+            <div class="inner"><center>Password Generator<br>
+              <a href='https://github.com/JOSHUA-MUANLAL/password_generator.git'><i class="fab fa-github"></i></a></center>
+          </div>
 
 
           </div>
@@ -104,27 +136,21 @@
         </div>
 
 
+        <!--WEB DEVELOPMENT-->
         <div class="card">
-          <div class="a1">Chat </div>
+          <div class="a2"><center>WEB DEVELOPMENT</center></div>
 
           <div class="b">
-            <h4>Chatter</h4>
-            <center><a href="#"><span class="card glyphicon glyphicon-new-window"></span></a></center>
-            <p class="card">Chating Web application for groups</p>
-
-
+            <h4>WEB DEV PROJECTS</h4>
+            <div class="inner"><center>Liscense Plate reader<br>
+              <a href='https://github.com/JOSHUA-MUANLAL/liscense_plate_reader.git'><i class="fab fa-github"></i></a></center>
           </div>
-
+          <div class="inner"><center>Hospital Management<br>
+            <a href='https://github.com/JOSHUA-MUANLAL/hospital-management.git'><i class="fab fa-github"></i></a></center>
         </div>
-
-
-        <div class="card">
-          <div class="a2"></div>
-
-          <div class="b">
-            <h4>Liscenese plate recorder</h4>
-            <center><a href="#"><span class="card glyphicon glyphicon-new-window"></span></a></center>
-            <p class="card">Liscenese plate reader and recorder for parking management which also generate fare on the base of duration of parking</p>
+        <div class="inner"><center>E-Commerce<br>
+          ON ITS WAY</center>
+        </div>  
 
 
           </div>
@@ -144,7 +170,7 @@
         <input type="mail" class="mail" placeholder="example@gmail.com">
         <input type="submit" value="Comment" >
       </form>
-      <a href="#"><span class="bi bi-instagram btn"></span></a>
+      <a href="https://www.instagram.com/joshua_tonxing"><span class="bi bi-instagram btn"></span></a>
       <a href="#"><span class="bi bi-facebook btn"></span></a>  
 
 
