--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
             </div>
             
             <div class="inner"><center>Car Price Prediction<br>
-              <a href="#"><span class="card glyphicon glyphicon-new-window"></span></a>&nbsp;&nbsp;
-                <a href='#'><i class="fab fa-github"></i></a></center>
+              <a href="https://github.com/JOSHUA-MUANLAL/car_price_prediction.git"><span class="card glyphicon glyphicon-new-window"></span></a>&nbsp;&nbsp;
+                <a href='https://github.com/JOSHUA-MUANLAL/car_price_prediction.git'><i class="fab fa-github"></i></a></center>
               </div>
               <div class="inner"><center>Sales Prediction<br>
                 <a href="https://github.com/JOSHUA-MUANLAL/sales_prediction.git"><span class="card glyphicon glyphicon-new-window"></span></a>&nbsp;&nbsp;
