--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
           </ul>
           <p class="joshua" id="skills">
             <span class="joshua">Web Development</span><br>
-            Web app development using Flask<br><br>
+            <ul><li>Node Js<li>Flask</li></ul><br><br>
             <span class="joshua">Data science</span><br>
             Python , Numoy, Pandas & Open CV<br><br>
             <span class="joshua">DSA</span><br>
-            Using Java
+            <ul><li>Python</li><li>Java</li></ul>
 
 
 
