--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           </ul>
           <p class="joshua" id="skills">
             <span class="joshua">Web Development</span><br>
-            <ul><li>Node Js<li>Flask</li></ul><br><br>
+            <ul><li>Node Js</li><li>Flask</li></ul><br><br>
             <span class="joshua">Data science</span><br>
             Python , Numoy, Pandas & Open CV<br><br>
             <span class="joshua">DSA</span><br>
