--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
           </ul>
           <p class="joshua" id="skills">
             <span class="joshua">Web Development</span><br>
-            <ul><li>Node Js</li><li>Flask</li></ul><br><br>
+            Flask, Node JS<br><br>
             <span class="joshua">Data science</span><br>
             Python , Numoy, Pandas & Open CV<br><br>
             <span class="joshua">DSA</span><br>
-            <ul><li>Python</li><li>Java</li></ul>
+            Python, Java
 
 
 
