--- a/resume.html
+++ b/resume.html
@@ -75,11 +75,11 @@
           </tr>
           <tr>
               <td class="i">15</td>
-             <td class="stat"><span class="return">&nbsp &nbsp &nbsp&nbsp  &nbsp &nbspreturn</span>[<span class="dict"> "C/C++","Python","Flask","Java","Data Structure and algo","CSS",</span></td>
+             <td class="stat"><span class="return">&nbsp &nbsp &nbsp&nbsp  &nbsp &nbspreturn</span>[<span class="dict"> "Python","Flask","Node Js,"Data Structure and algo","HTML/CSS",</span></td>
           </tr>
           <tr>
               <td class="i">16</td>
-             <td class="stat">&nbsp &nbsp &nbsp&nbsp &nbsp&nbsp<span class="dict"> "Bootstrap","MySQL"</span> ] </td>
+             <td class="stat">&nbsp &nbsp &nbsp&nbsp &nbsp&nbsp<span class="dict"> "MySQL"</span> ] </td>
           </tr>
           <tr>
               <td class="i">17</td>
